# ImplicitSoftBody

./: .gitignore  README.md  output.html  pyproject.toml
assets/example/: SITL15.html  bdf31.html  case_0.html  failed.html  final99.html  vis_euler_12.html
assets/mesh/: normalized_mesh_0.json  simple_mesh.json
implicit_soft_body/: Sim.py  Sim_BDF.py  Sim_bdf.py  Sim_debug.py  Sim_test.py  __init__.py  analytic_debug.py  grad_test.ipynb  load_weights.py  load_weights_.py  network.py  robot_debug.py  robot_model.py  robot_model_.py  robot_model_bdf.py  robot_model_simple.py  simulate.py  single_spring.py  supervised_training.py  system.py  system_bdf.py  template.html  utils.py  visualization.py
implicit_soft_body/energy/: __init__.py  base.py  collision.py  element.py  friction.py  gravity.py  inertial.py  neohookean.py  spring.py
implicit_soft_body/geometry/: model.py  triangle.py
implicit_soft_body/integrator/: backward_euler.py  base.py
implicit_soft_body/integrator.py/: backward_euler.py
scripts/: SITL.py  case_0.py  case_1.py  case_2.py  grad_test.ipynb  normalize_mesh.py  pretrain.py  robot_model_bdf.py  robot_model_euler.py  simulate.py  train.py  visualize_acutation_seq.py
